@@ -205,6 +205,7 @@
         	<include name="GenContain.scala" />
         	<include name="GenSorted.scala" />
         	<include name="GenLoneElement.scala" />
+        	<include name="GenEmpty.scala" />
         </scalac>
     </target>
 	
@@ -296,6 +297,15 @@
 	<target name="genloneelement" depends="init, compile-codegenerators"
 	        unless="genloneelement.uptodate">
 	  <java classname="GenLoneElement"
+	        classpathref="run.generators.class.path" fork="false">
+	    <arg value="${build.generated.tests.src}" />
+	    <arg value="${scala.version}" />
+	  </java>
+	</target>
+
+	<target name="genempty" depends="init, compile-codegenerators"
+	        unless="genempty.uptodate">
+	  <java classname="GenEmpty"
 	        classpathref="run.generators.class.path" fork="false">
 	    <arg value="${build.generated.tests.src}" />
 	    <arg value="${scala.version}" />
@@ -397,7 +407,7 @@
 	  <delete dir="${build.generated.tests.bin}" />
 	</target>
 	
-    <target name="compile-gentests" depends="compile-tests, geninspectors, gencontain, gensorted, genloneelement">
+    <target name="compile-gentests" depends="compile-tests, geninspectors, gencontain, gensorted, genloneelement, genempty">
       <scalac srcdir="${build.generated.tests.src}" destdir="${build.generated.tests.bin}" target="jvm-1.5" classpathref="build.test.class.path" deprecation="yes" addparams="-no-specialization" fork="true" jvmargs="${jvmargs} -XX:+UseConcMarkSweepGC">
 		<include name="org/scalatest/junit/*.scala"/>
 		<include name="org/scalatest/matchers/*.scala"/>
@@ -425,6 +435,9 @@
       </scalac>
       <scalac srcdir="${build.generated.tests.src}" destdir="${build.generated.tests.bin}" target="jvm-1.5" classpathref="build.test.class.path" deprecation="yes" addparams="-no-specialization" fork="true" jvmargs="${jvmargs} -XX:+UseConcMarkSweepGC">
         <include name="org/scalatest/sorted/*.scala"/>
+      </scalac>
+      <scalac srcdir="${build.generated.tests.src}" destdir="${build.generated.tests.bin}" target="jvm-1.5" classpathref="build.test.class.path" deprecation="yes" addparams="-no-specialization" fork="true" jvmargs="${jvmargs} -XX:+UseConcMarkSweepGC">
+        <include name="org/scalatest/empty/*.scala"/>
       </scalac>
 <!--
  <echo message="Compiling ArrayShouldContainAllOfLogicalAndSpec.scala"/>
